# Demineur

./: CMakeLists.txt  box.cpp  box.h  boxgrid.cpp  boxgrid.h  demineur_fr_FR.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mysettings.h  optiondialog.cpp  optiondialog.h  optiondialog.ui  settings.cpp  settings.h
demineur/: CMakeLists.txt  bestscoresframe.cpp  bestscoresframe.h  bestscoresframe.ui  box.h  boxgrid.cpp  boxgrid.h  demineur_fr_FR.ts  mainwindow.cpp  mainwindow.h  mainwindow.ui  mysettings.cpp  mysettings.h  optiondialog.cpp  optiondialog.h  optiondialog.ui  resources.qrc  score.cpp  score.h  scorecard.cpp  scorecard.h  scoresdialog.cpp  scoresdialog.h  scoresdialog.ui
demineurExe/: CMakeLists.txt  main.cpp
demineurTest/: CMakeLists.txt  tst_gui_mainwindow.cpp  tst_unit_test.cpp
test/: CMakeLists.txt
test/unit_test/: CMakeLists.txt  tst_unit_test.cpp
